--- a/plugin.xml
+++ b/plugin.xml
@@ -46,8 +46,15 @@
 		<header-file src="src/ios/ELCImagePicker/ELCAssetTablePicker.h" />
 		<source-file src="src/ios/ELCImagePicker/ELCAssetTablePicker.m" />
 
+		<header-file src="src/ios/ELCImagePicker/ELCConsole.h" />
+		<source-file src="src/ios/ELCImagePicker/ELCConsole.m" />
+
 		<header-file src="src/ios/ELCImagePicker/ELCImagePickerController.h" />
 		<source-file src="src/ios/ELCImagePicker/ELCImagePickerController.m" />
+		<header-file src="src/ios/ELCImagePicker/ELCImagePickerHeader.h" />
+		
+		<header-file src="src/ios/ELCImagePicker/ELCOverlayImageView.h" />
+		<source-file src="src/ios/ELCImagePicker/ELCOverlayImageView.m" />
 
 		<resource-file src="src/ios/ELCImagePicker/Resources/ELCAlbumPickerController.xib" />
 		<resource-file src="src/ios/ELCImagePicker/Resources/ELCAssetPicker.xib" />
